# shinobu

./: .gitignore  Cargo.toml
.cargo/: config.toml
crates/snb_cli/src/: main.rs
crates/snb_core/: build.rs
crates/snb_core/src/: context.rs  event.rs
crates/snb_runtime/src/: plugin_manager.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: main.rs
plugins/snb_adapter_stdin/src/: lib.rs
plugins/snb_plugin_example/src/: lib.rs
