[package]
name = "xtask"
version.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
toml.workspace = true
